GNOME Bugzilla – Bug 591182
[REGRESSION/PATCH] No application icons are shown in task group menu
Last modified: 2009-09-08 01:30:42 UTC
After Gnome switched the default to not show icons in menus, the icons in grouped tasks menu aren't visible as the design guide suggests. Other information: Question: Should the maximize, minimize and close icons be visible? According to the design guides - no, but is this a valid exception as it's "standard" to have them there (aka Windows has them - not a valid argument I know...)
Created attachment 140236 [details] [review] Oneliner to add icons to the task group menu
The following fix has been pushed: ec82fc0 [tasklist] Always show icons in group menu
Created attachment 142664 [details] [review] [tasklist] Always show icons in group menu