[tasklist] Always show icons in group menu

http://bugzilla.gnome.org/show_bug.cgi?id=591182